# worc_api

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
src/api/: main.py  route_logic.py
src/app/api/: .env  main.py  route_logic.py
src/app/helper_modules/: data_analysis.ipynb  logger_setup.py
src/app/queries/: indices.sql  ingest_data.sql  make_db.sql  schema.sql
src/db/: db.py
src/helper_modules/: clean_data.py  data_analysis.ipynb  logger.py  logger_setup.py
src/queries/: exploration.sql  ingest_data.sql  queries.sql  schema.sql
src/worc_api_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_main.py
